base/sprintstart-frontend/backend-placeholder.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprintstart-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
