base/sprintstart-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprintstart-frontend
spec:
  selector:
    app: sprintstart-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
