base/sprintstart-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprintstart-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sprintstart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sprintstart-frontend
            port:
              number: 80
